fix: app menu is not cropped anymore on onboarding page

--- a/src/components/Layout/Layout.styl
+++ b/src/components/Layout/Layout.styl
@@ -26,8 +26,9 @@
 html
 body
     +medium-screen()
-        display block
+        display flex
         height auto
+        min-height 100vh
         overflow auto
         overflow-x hidden
 // END Cozy-UI
